--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 
-file(GLOB_RECURSE all_imp_srcs CONFIGURE_DEPENDS [^app_]*.cpp)
-add_library(${MY_LIB}  SHARED ${all_imp_srcs})
+file(GLOB_RECURSE all_imp_srcs CONFIGURE_DEPENDS *.cpp)
+list(FILTER all_imp_srcs EXCLUDE REGEX "app_.*.cpp$")
+add_library(${MY_LIB} SHARED ${all_imp_srcs} )
 
 # for each "src/app_x.cpp", generate target "app_x"
 file(GLOB_RECURSE all_app_srcs CONFIGURE_DEPENDS app_*.cpp)
@@ -13,7 +14,3 @@ foreach(v ${all_app_srcs})
     add_executable(${target_name} ${v})
     TARGET_LINK_LIBRARIES(${target_name}  ${MY_LIB})
 endforeach()
-
-
-
-
