--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,7 @@
 cmake_minimum_required(VERSION 3.20.0)
+# conan install . --output-folder=build --build=missing -s build_type=Release
+# conan install . --output-folder=build --build=missing -s build_type=Debug
+set(CMAKE_TOOLCHAIN_FILE ${CMAKE_BINARY_DIR}/conan_toolchain.cmake)
 
 set(CMAKE_CXX_STANDARD 17)
 # set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -10,10 +13,6 @@ if (NOT CMAKE_BUILD_TYPE)
 endif()
 
 project(my_project_name VERSION 0.0.1 LANGUAGES C CXX)
-
-execute_process(COMMAND conan install .. --build=missing)
-set(CONAN_DISABLE_CHECK_COMPILER TRUE)
-include(${CMAKE_CURRENT_BINARY_DIR}/conan_paths.cmake)
 
 include_directories(${PROJECT_SOURCE_DIR}/include)
 set(MY_LIB mylib)
